<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Liceo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_mymarks">Marks</string>
    <string name="nav_events">Events</string>
    <string name="nav_news">News</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_safe">Safe</string>
    <string name="nav_share">Share</string>
    <string name="nav_help">Help</string>
    <string name="shortcut_site">Website</string>
    <string name="shortcut_register">Register</string>
    <string name="shortcut_moodle">Moodle</string>
    <string name="shortcut_copybook">Copybook</string>
    <string name="shortcut_teacherzone">Teacher area</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggestion_username">Insert your name in the settings for a more personalized experience</string>
    <string name="suggestion_safe_intro">You keep forgetting your password? Check Safe out and store all of them in a single place</string>
    <string name="suggestion_safe_pwd">Someone knows your Safe password? Log in and change it</string>
    <string name="suggestion_avg">Would you like to know what mark you should get to have the sufficiency in a subject? Pick a subject and look at the suggestions</string>
    <string name="suggestion_quarter">A new quarter has begun? No problem, marks will be automatically filtered</string>
    <string name="suggestion_edit_event">Your classmates keep asking for homework? If you save them in an event, you\'ll be able to answer in a couple of seconds</string>
    <string name="suggestion_notification_remote">Most important news from the school will be delivered as notifications</string>
    <string name="suggestion_get_touch">Need to get in touch with the school? You can call or send an email from the settings</string>
    <string name="suggestion_address">You can\'t find a subject int the list? Check the address</string>
    <string name="suggestion_suggestions">Suggestions annoy you? Turn them off</string>
    <string name="suggestion_notification">You will be notified about your events the day before</string>
    <string name="suggestion_backups">Create a backup in Google Drive, you\'ll be able to restore your data in case you lose or change your phone</string>
    <string name="share_title">Share with someone</string>
    <string name="home_card_week_title">This week</string>
    <string name="home_card_week_morning">Good morning</string>
    <string name="home_card_week_afternoon">Good afternoon</string>
    <string name="home_card_week_evening">Good evening</string>
    <string name="home_card_week_free">It looks like you\'re free</string>
    <string name="home_card_week_recap">Here\'s a quick recap of this week\'s events:</string>
    <string name="home_card_week_action">Plan something</string>
    <plurals name="home_card_week_item">
        <item quantity="one">\u2022 %1$d %2$s on %3$s</item>
        <item quantity="other">\u2022 %1$d %2$s (first one on %3$s)</item>
    </plurals>
    <string name="home_card_marks_action">Add a mark</string>
    <string name="home_card_marks_empty">You\'ve not registered any mark so far. Add some to see your results here</string>
    <string name="home_card_marks_positive">Well done, your average is <i>%1$s</i>.\nIt looks like you\'re good in %2$s. Keep it on!</string>
    <string name="home_card_marks_neutral">Good, your average is <i>%1$s</i>.\nDo you like %2$s? It\'s the subject with the highest average</string>
    <string name="home_card_marks_negative">Oh no, your average is <i>%1$s</i>.\nYou should really improve %2$s: it has the lowest average</string>
    <string name="search_action">Search\u2026</string>
    <string name="search_no_result">No result found</string>
    <string name="dialog_updated_title">App has been updated</string>
    <string name="dialog_updated_content">
        \u2022 New: refreshed user interface.\n
        \u2022 New: access Safe with your fingerprint.\n
        \u2022 New: new year migration tool.\n
        \u2022 New: Android 8.0 support.\n
        \u2022 Performances improvements.\n
        \u2022 Bug fixes.
    </string>
    <string name="dialog_updated_changelog">Changelog</string>
    <string name="title_activity_editor">Editor</string>
    <string name="editor_new_mark">New mark</string>
    <string name="editor_new_event">New event</string>
    <string name="editor_update_mark">Update mark</string>
    <string name="editor_update_event">Update event</string>
    <string name="editor_hint_notes">Notes (optional)</string>
    <string name="editor_hint_subject">Subject</string>
    <string name="editor_hint_student">Student</string>
    <string name="editor_hint_event">Title</string>
    <string name="editor_hint_value">Value</string>
    <string name="editor_hint_date">Date</string>
    <string name="editor_save">Save</string>
    <string name="editor_saved">Saved</string>
    <string name="editor_cancel_message">Do you want to exit without saving the changes?</string>
    <string name="editor_dialog_mark_title">Select a mark</string>
    <string name="editor_error">Something is wrong, check the values</string>
    <string name="editor_hashtag_hint">You can organize your events by adding hashtags. Try to write <i>#important</i>. Hashtags are automatically added when you write a world preceded by an # in the notes</string>
    <string name="editor_date_two_days">The day after tomorrow</string>
    <string name="editor_date_next_week">Next week</string>
    <string name="editor_date_custom">Select a date\u2026</string>
    <string name="title_activity_mark_list">Marks</string>
    <string name="marks_menu_filter">Filter marks</string>
    <string name="hint_content_common">To have sufficiency the next mark</string>
    <string name="hint_content_under">might be %1$s or higher</string>
    <string name="hint_content_above">must be %1$s or higher</string>
    <string name="error_noaddress">Set a valid address to use this feature</string>
    <string name="marks_empty">Touch + icon to add a mark</string>
    <string name="marks_filter_description">Click on a quarter to show or hide its marks</string>
    <string name="marks_filter_error">Select at least one</string>
    <string name="marks_filter_action">Filter</string>
    <string name="marks_share_student">I got %1$d in %2$s</string>
    <string name="marks_share_teacher">%1$s has got %2$d</string>
    <string name="actions_edit">Edit</string>
    <string name="actions_remove">Remove</string>
    <string name="actions_removed">Removed</string>
    <string name="actions_share">Share</string>
    <string name="actions_to_event">Save as event</string>
    <string name="actions_exit">Exit</string>
    <string name="actions_yes">Yes</string>
    <string name="actions_no">No</string>
    <string name="title_activity_event_list">Events</string>
    <string name="events_empty">Touch + icon to add a mark</string>
    <string name="events_time_yesterday">Yesterday</string>
    <string name="events_time_today">Today</string>
    <string name="events_time_tomorrow">Tomorrow</string>
    <string name="events_time_default_format">MMM dd</string>
    <plurals name="events_time_past">
        <item quantity="one">Last %1$s</item>
        <item quantity="two">One week ago</item>
        <item quantity="other">%1$d weeks ago</item>
    </plurals>
    <string name="events_time_future" tools:ignore="PluralsCandidate">In %1$d weeks</string>
    <string name="events_test">Test</string>
    <string name="event_school">At school</string>
    <string name="event_birthday">Birthday</string>
    <string name="event_homework">Homework</string>
    <string name="event_reminder">Reminder</string>
    <string name="event_meeting">Meeting</string>
    <string name="event_other">Other</string>
    <string name="news_empty">There\'s nothing new so far</string>
    <string name="news_type_private">Communique: %1$s</string>
    <string name="slide0_title">Hello</string>
    <string name="slide0_message_loading">Getting ready\u2026</string>
    <string name="slide0_message_failed">Oops, there\'s no internet connection</string>
    <string name="slide1_title">Address</string>
    <string name="slide1_message">To begin, please pick your address</string>
    <string name="intro_btn_retry">Retry</string>
    <string name="intro_btn_done">Start</string>
    <string name="intro_drawer_title">Start here</string>
    <string name="intro_drawer">Tap this to navigate through the app sections.\nThe home screen will show you information at the right time</string>
    <string name="intro_fab_save_safe_title">Welcome</string>
    <string name="intro_fab_save_safe">Store your credentials here, then tap this to save</string>
    <string name="intro_toast_long_press">Long press to display other options</string>
    <string name="subject_english">English</string>
    <string name="subject_french">French</string>
    <string name="subject_german">German</string>
    <string name="subject_history">History</string>
    <string name="subject_arts">History of Art</string>
    <string name="subject_human">Human sciences</string>
    <string name="subject_irc">IRC</string>
    <string name="subject_it">IT</string>
    <string name="subject_italian">Italian</string>
    <string name="subject_latin">Latin</string>
    <string name="subject_economy">Law and economy</string>
    <string name="pref_general">Preferences</string>
    <string name="pref_isTeacher_title">Teacher mode</string>
    <string name="pref_teacher_summary">You\'re a teacher</string>
    <string name="pref_student_summary">You\'re a student</string>
    <string name="pref_address_title">Address</string>
    <string name="pref_address_dialog">Pick an address</string>
    <string name="pref_suggestion_title">Suggestions</string>
    <string name="pref_suggestion_summary">Show information about the app in the Home screen</string>
    <string name="pref_info">Info</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_getintouch">Get in touch</string>
    <string name="pref_mail_title">Email</string>
    <string name="pref_phone_title">Phone</string>
    <string name="pref_facebook_title">Facebook</string>
    <string name="pref_instagram_title">Instagram</string>
    <string name="pref_username">User name</string>
    <string name="pref_username_dialog_title">Set user name</string>
    <string name="pref_notif">Notifications</string>
    <string name="pref_notification_news_title">Show news notifications</string>
    <string name="pref_notification_news_summary">Get notification about news as soon as they\'re received</string>
    <string name="pref_notification_events_title">Show events notifications</string>
    <string name="pref_notification_events_summary">Get notification about upcoming events</string>
    <string name="pref_notification_events_time_title">Appearance time</string>
    <string name="pref_notification_events_time_dialog_title">Choose when the notification should appear</string>
    <string name="pref_opensource_title">Open source</string>
    <string name="pref_opensource_message">Released under LGPL v3 license</string>
    <string name="title_activity_poster">Poster</string>
    <string name="shortcut_marks_short">Marks</string>
    <string name="shortcut_marks_long">Marks</string>
    <string name="shortcut_marks_disabled">Marks - Disabled</string>
    <string name="shortcut_events_short">Events</string>
    <string name="shortcut_events_long">Events</string>
    <string name="shortcut_events_disabled">Events - Disabled</string>
    <string name="shortcut_news_short">News</string>
    <string name="shortcut_news_long">News</string>
    <string name="shortcut_news_disabled">News - Disabled</string>
</resources>