<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.PreferenceCategory android:title="@string/pref_general">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="isTeacher_key"
            android:summaryOff="@string/pref_student_summary"
            android:summaryOn="@string/pref_teacher_summary"
            android:title="@string/pref_isTeacher_title" />

        <androidx.preference.ListPreference
            android:defaultValue="1"
            android:dependency="isTeacher_key"
            android:dialogTitle="@string/pref_address_dialog"
            android:entries="@array/pref_entries_address"
            android:entryValues="@array/pref_entryvalues_address"
            android:key="address_key"
            android:summary="%s"
            android:title="@string/pref_address_title" />

        <androidx.preference.EditTextPreference
            android:dialogTitle="@string/pref_username_dialog_title"
            android:key="username_key"
            android:title="@string/pref_username" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="showSuggestions_key"
            android:summary="@string/pref_suggestion_summary"
            android:title="@string/pref_suggestion_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_notif">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notification_news_key"
            android:summary="@string/pref_notification_news_summary"
            android:title="@string/pref_notification_news_title" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="notification_events_key"
            android:summary="@string/pref_notification_events_summary"
            android:title="@string/pref_notification_events_title" />

        <androidx.preference.ListPreference
            android:defaultValue="2"
            android:dependency="notification_events_key"
            android:dialogTitle="@string/pref_notification_events_time_dialog_title"
            android:entries="@array/pref_entries_notification_time"
            android:entryValues="@array/pref_entryvalues_notification_time"
            android:key="notification_events_time_key"
            android:summary="%s"
            android:title="@string/pref_notification_events_time_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_getintouch">

        <androidx.preference.PreferenceScreen android:title="@string/pref_mail_title">
            <intent
                android:action="android.intent.action.SENDTO"
                android:data="mailto:viis00200v@istruzione.it" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen android:title="@string/pref_phone_title">
            <intent
                android:action="android.intent.action.DIAL"
                android:data="tel:0444676125" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen android:title="@string/pref_facebook_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.facebook.com/liceoarzignano" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen android:title="@string/pref_instagram_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.instagram.com/liceoarzignano" />
        </androidx.preference.PreferenceScreen>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_info">

        <androidx.preference.Preference
            android:key="changelog_key"
            android:summary="@string/pref_app_version_summary"
            android:title="@string/pref_app_version_title" />

        <androidx.preference.PreferenceScreen
            android:title="@string/pref_opensource_title"
            android:summary="@string/pref_opensource_message">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/config_url_sources" />
        </androidx.preference.PreferenceScreen>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
