<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25">
    <shortcut
        android:icon="@drawable/ic_shortcut_marks"
        android:shortcutDisabledMessage="@string/shortcut_marks_disabled"
        android:shortcutId="marks"
        android:shortcutLongLabel="@string/shortcut_marks_long"
        android:shortcutShortLabel="@string/shortcut_marks_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="it.liceoarzignano.bold.marks.MarkListActivity"
            android:targetPackage="it.liceoarzignano.bold" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_shortcut_events"
        android:shortcutDisabledMessage="@string/shortcut_events_disabled"
        android:shortcutId="events"
        android:shortcutLongLabel="@string/shortcut_events_long"
        android:shortcutShortLabel="@string/shortcut_events_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="it.liceoarzignano.bold.events.EventListActivity"
            android:targetPackage="it.liceoarzignano.bold" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_shortcut_news"
        android:shortcutDisabledMessage="@string/shortcut_news_disabled"
        android:shortcutId="news"
        android:shortcutLongLabel="@string/shortcut_news_long"
        android:shortcutShortLabel="@string/shortcut_news_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="it.liceoarzignano.bold.news.NewsListActivity"
            android:targetPackage="it.liceoarzignano.bold" />
    </shortcut>
</shortcuts>
