<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_my_marks"
            android:icon="@drawable/ic_my_marks"
            android:title="@string/nav_mymarks" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_poster"
            android:icon="@drawable/ic_poster"
            android:title="@string/title_activity_poster" />
        <item
            android:id="@+id/nav_safe"
            android:icon="@drawable/ic_safe"
            android:title="@string/nav_safe" />
    </group>
    <group
        android:id="@+id/nav_more"
        android:checkableBehavior="none"
        tools:ignore="UnusedIds">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help" />
    </group>
</menu>
