<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/sheet_margin"
    android:paddingRight="@dimen/sheet_margin"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:id="@+id/actions_dialog_edit"
        android:visibility="gone"
        style="@style/AppTheme.BottomSheetLayout">

        <ImageView
            style="@style/AppTheme.BottomSheetIcon"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            style="@style/AppTheme.BottomSheetText"
            android:text="@string/actions_edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_dialog_share"
        style="@style/AppTheme.BottomSheetLayout">

        <ImageView
            style="@style/AppTheme.BottomSheetIcon"
            app:srcCompat="@drawable/ic_share_avd" />

        <TextView
            style="@style/AppTheme.BottomSheetText"
            android:text="@string/actions_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_dialog_to_event"
        android:visibility="gone"
        style="@style/AppTheme.BottomSheetLayout">

        <ImageView
            style="@style/AppTheme.BottomSheetIcon"
            app:srcCompat="@drawable/ic_event" />

        <TextView
            style="@style/AppTheme.BottomSheetText"
            android:text="@string/actions_to_event" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_dialog_remove"
        style="@style/AppTheme.BottomSheetLayout">

        <ImageView
            style="@style/AppTheme.BottomSheetIcon"
            app:srcCompat="@drawable/ic_remove" />

        <TextView
            style="@style/AppTheme.BottomSheetText"
            android:text="@string/actions_remove" />
    </LinearLayout>
</LinearLayout>
