<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <!-- Who - 1 -->
                <RelativeLayout
                    android:id="@+id/editor_subject_layout"
                    style="@style/AppTheme.EditorLayout"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        style="@style/AppTheme.EditorInput"
                        android:hint="@string/editor_hint_subject">

                        <EditText
                            android:id="@+id/editor_subject_selector"
                            style="@style/AppTheme.EditorEditText"
                            android:focusable="false"
                            android:inputType="none" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_title" />
                </RelativeLayout>

                <!-- Who - 2 -->
                <RelativeLayout
                    android:id="@+id/editor_title_layout"
                    style="@style/AppTheme.EditorLayout"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/editor_input_title"
                        style="@style/AppTheme.EditorInput">

                        <EditText
                            android:id="@+id/editor_title_text"
                            style="@style/AppTheme.EditorEditText"
                            tools:ignore="TextFields" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_title" />
                </RelativeLayout>

                <!-- What - 1 -->
                <RelativeLayout
                    android:id="@+id/editor_value_layout"
                    style="@style/AppTheme.EditorLayout"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        style="@style/AppTheme.EditorInput"
                        android:hint="@string/editor_hint_value">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editor_value_view"
                            style="@style/AppTheme.EditorEditText"
                            android:focusable="false"
                            android:inputType="none"
                            android:text="@string/default_mark" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_trophy" />
                </RelativeLayout>

                <!-- What  - 2 -->
                <RelativeLayout
                    android:id="@+id/editor_category_layout"
                    style="@style/AppTheme.EditorLayout"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/editor_category_spinner"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="8dp" />

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_category" />
                </RelativeLayout>

                <!-- When -->
                <RelativeLayout style="@style/AppTheme.EditorLayout">

                    <android.support.design.widget.TextInputLayout
                        style="@style/AppTheme.EditorInput"
                        android:hint="@string/editor_hint_date">

                        <EditText
                            android:id="@+id/editor_date_view"
                            style="@style/AppTheme.EditorEditText"
                            android:focusable="false"
                            android:inputType="none"
                            tools:ignore="TextFields" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_calendar" />
                </RelativeLayout>

                <!-- Why -->
                <RelativeLayout
                    style="@style/AppTheme.EditorLayout"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        style="@style/AppTheme.EditorInput"
                        android:hint="@string/editor_hint_notes">

                        <EditText
                            android:id="@+id/editor_notes_text"
                            style="@style/AppTheme.EditorEditText"
                            android:layout_height="match_parent"
                            android:minHeight="48dp"
                            tools:ignore="TextFields" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_notes" />
                </RelativeLayout>

                <!-- # hashtags -->
                <RelativeLayout
                    android:id="@+id/editor_hashtags_layout"
                    style="@style/AppTheme.EditorLayout"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <it.liceoarzignano.bold.ui.recyclerview.RecyclerViewExt
                        android:id="@+id/editor_hashtags_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginTop="16dp"
                        app:horizontalMode="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editor_hashtags_list"
                        android:layout_marginLeft="56dp"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/editor_hashtag_hint" />

                    <ImageView
                        style="@style/AppTheme.EditorIcon"
                        app:srcCompat="@drawable/ic_hashtag" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/editor_save_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/editor_save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
